fix(place): corrige letter-spacing

--- a/blocks/place.css
+++ b/blocks/place.css
@@ -36,7 +36,6 @@
   display: block;
   font-size: 12px;
   line-height: 100%;
-  letter-spacing: 12%;
   text-transform: uppercase;
   margin: 0 0 8px;
   color: #aaaaaa;
